Fixing modal on mobile

--- a/mobile-experience/css/style.css
+++ b/mobile-experience/css/style.css
@@ -16,5 +16,5 @@ body
 }
 .modal
 {
-    margin-top: -280px !important;
+    margin-top: -300px !important;
 }
